--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<title>Which Do U Like?</title>
-		<link rel="stylesheet" href="main.css" type="text/css" />
-		<script type="text/javascript" src="jquery-1.9.1.min.js"></script>
-		<script type="text/javascript" src="getImage.js"></script>
+		<link rel="stylesheet" href="css/main.css" type="text/css" />
+		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+		<script type="text/javascript" src="js/getImage.js"></script>
 	</head>
 	<body>
 		<div id="wrapper">
