--- a/rank.html
+++ b/rank.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Which Do U Like -- ranking</title>
 		<link rel="stylesheet" href="" type="text/css" />
-		<script type="text/javascript" src="jquery-1.9.1.min.js"></script>
+		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 		<script type="text/javascript" src="getRanking.js"></script>
 	</head>
 	<body>
