update rank.html design

--- a/rank.html
+++ b/rank.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Which Do U Like -- ranking</title>
-		<link rel="stylesheet" href="" type="text/css" />
-		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-		<script type="text/javascript" src="js/getRanking.js"></script>
-	</head>
-	<body>
-		<div id="wrapper">
-			<div id="header"> </div>
-			<div id="content">
-				<table border="1">
-					<thead>
-						<th>Face</th>
-						<th>Lovers</th>
-					</thead>
-					<tbody> </tbody>
-				</table>
-			</div>
-			<div id="footer"> </div>
-		</div>
-	</body>
+  <head>
+    <title>Which Do U Like -- ranking</title>
+    <link rel="stylesheet" href="css/rank.css" type="text/css" />
+    <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="js/getRanking.js"></script>
+  </head>
+  <body>
+    <div id="wrapper">
+      <div id="header"> </div>
+      <div id="content">
+	<table>
+	  <thead>
+	    <th width="150">Face</th>
+	    <th>Lovers</th>
+	  </thead>
+	  <tbody> </tbody>
+	</table>
+      </div>
+      <div id="footer"> </div>
+    </div>
+  </body>
 </html>
