--- a/rank.html
+++ b/rank.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Which Do U Like -- ranking</title>
+    <meta name="viewport" content="width=330" />
     <link rel="stylesheet" href="css/rank.css" type="text/css" />
     <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="js/getRanking.js"></script>
