--- a/index.html
+++ b/index.html
@@ -8,35 +8,30 @@
 
 		<link rel="stylesheet" href="css/main.css" type="text/css" />
 		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-		<script type="text/javascript" src="js/getImage.js"></script>
+		<script async type="text/javascript" src="js/getImage.js"></script>
 	</head>
 	<body>
-		<div id="wrapper">
-
-			<div id="header">
+		<section>
+			<header>
 				<img id="logo" src="logo.png" width="560" alt="which do u like?" />
-			</div><!-- header end -->
+			</header>
 
 			<div id="content">
-
-				<div class="image left">
-					<img id="img1" src="" height="200" width="200"/>
-				</div>
-
-				<div class="image right">
-					<img id="img2" src="" height="200" width="200"/>
-				</div>
-
+				<ul>
+					<li class="image left">
+						<img id="img1" src="" height="200" width="200"/>
+					</li>
+					<li class="image right">
+						<img id="img2" src="" height="200" width="200"/>
+					</li>
+				</ul>
 			</div><!--content end -->
 
-			<div id="footer">
-
-				<div id="rank">
-					<a href="rank.html">RANKING</a> | <a href="https://github.com/boringmachine/WhichDoULike">CODE</a>
-				</div>
-				<div id="copylight"></div>
-
-			</div>
-		</div><!-- wrapper end -->
+			<footer>
+				<nav>
+					<b id="rank"><a href="rank.html">RANKING</a></b> | <b id="code"><a href="https://github.com/boringmachine/WhichDoULike">CODE</b>
+				</nav>
+			</footer>
+		</section>
 	</body>
 </html>
