--- a/rank.html
+++ b/rank.html
@@ -8,18 +8,14 @@
 		<script type="text/javascript" src="js/getRanking.js"></script>
 	</head>
 	<body>
-		<div id="wrapper">
-			<div id="header"></div>
-			<div id="content">
-				<table>
-					<thead>
-						<th width="150">Face</th>
-						<th>Lovers</th>
-					</thead>
-					<tbody></tbody>
-				</table>
-			</div>
-			<div id="footer"></div>
-		</div>
+		<section>
+			<table>
+				<thead>
+					<th width="150">Face</th>
+					<th>Lovers</th>
+				</thead>
+				<tbody> </tbody>
+			</table>
+		</section>
 	</body>
 </html>
