--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
 			<footer>
 				<nav>
-					<b id="rank"><a href="rank.html">RANKING</a></b> | <b id="code"><a href="https://github.com/boringmachine/WhichDoULike">CODE</b>
+					<b id="rank"><a href="rank.html">RANKING</a></b> | 
+					<b id="code"><a href="https://github.com/boringmachine/WhichDoULike">CODE</a></b>
 				</nav>
 			</footer>
 		</section>
