--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<img id="logo" src="logo.png" width="560" alt="which do u like?" />
 			</header>
 
-			<div id="content">
+			<nav id="content">
 				<ul>
 					<li class="image left">
 						<img id="img1" src="" height="200" width="200"/>
@@ -22,7 +22,7 @@
 						<img id="img2" src="" height="200" width="200"/>
 					</li>
 				</ul>
-			</div><!--content end -->
+			</nav><!--content end -->
 
 			<footer>
 				<nav>
