--- a/index.html
+++ b/index.html
@@ -12,16 +12,10 @@
       <header>
 	<img id="logo" src="logo.png" width="560" alt="which do u like?" />
       </header>
-      <nav id="content">
-	<ul>
-	  <li class="image left">
-	    <img id="img1" src="" height="200" width="200"/>
-	  </li>
-	  <li class="image right">
-	    <img id="img2" src="" height="200" width="200"/>
-	  </li>
-	</ul>
-      </nav>
+      <div id="content">
+	<img id="img1" class="image right" src="" height="200" width="200"/>
+	<img id="img2" class="image left " src="" height="200" width="200"/>
+      </div><!-- end content -->
       <footer>
 	<nav>
 	  <b id="rank"><a href="rank.html">RANKING</a></b> | 
