--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 	<img id="logo" src="logo.png" width="560" alt="which do u like?" />
       </header>
       <div id="content">
-	<img id="img1" class="image right" src="" height="200" width="200"/>
-	<img id="img2" class="image left " src="" height="200" width="200"/>
+	<ul>
+	  <li><img id="img1" class="image right" src="" height="200" width="200"/></li>
+	  <li><img id="img2" class="image left " src="" height="200" width="200"/></li>
+	</ul>
       </div><!-- end content -->
       <footer>
 	<nav>
