--- a/rank.html
+++ b/rank.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="css/rank.css" type="text/css" />
 		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 		<script type="text/javascript" src="js/getRanking.js"></script>
+		<script type="text/javascript" src="js/arrayLikeObjectSorter.js"></script>
 	</head>
 	<body>
 		<section>
