--- a/rank.html
+++ b/rank.html
@@ -6,16 +6,17 @@
 		<link rel="stylesheet" href="css/rank.css" type="text/css" />
 		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 		<script type="text/javascript" src="js/getRanking.js"></script>
-		<script type="text/javascript" src="js/arrayLikeObjectSorter.js"></script>
+		<script type="text/javascript" src="js/jquery.arrayLikeObjectSorter-0.0.1.js"></script>
 	</head>
 	<body>
-		<section>
-			<table>
-				<thead>
-					<th width="150">Face</th>
+	<section>
+		<table>
+			<thead>
+				<th width="150">Face</th>
 					<th>Lovers</th>
 				</thead>
-				<tbody></tbody>
+				<tbody>
+				</tbody>
 			</table>
 			<button id="loadButton">LoadNext</button>
 		</section>
