--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=650" />
     <link rel="stylesheet" href="css/main.css" type="text/css" />
     <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-    <script type="text/javascript" src="js/getImage.js"></script>
+    <script async type="text/javascript" src="js/getImage.js"></script>
   </head>
   <body>
     <section>
